--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.4.7",
+    "angular-route": "^1.4.7",
     "body-parser": "^1.14.1",
     "express": "^4.13.3"
   }
