--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.1",
+    "ejs": "^2.4.2",
     "express": "^4.13.3",
     "jade": "^1.11.0"
   }
