--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "start" : "app.js",
   "scripts": {
+    "start" : "app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
