--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,8 @@
     "angular-ui-router": "~0.2.15",
     "angular-resource": "~1.4.7",
     "angular-route": "~1.5.6",
-    "bootstrap": "~3.3.6"
+    "bootstrap": "~3.3.6",
+    "AngularJS-Toaster": "toaster#~2.0.0",
+    "angular-animate": "1.4.7"
   }
 }
